rust/foxglove/src/websocket/ws_protocol/client/snapshots/foxglove__websocket__ws_protocol__client__set_parameters__tests__encode_with_id.snap
---
source: rust/foxglove/src/websocket/ws_protocol/client/set_parameters.rs
expression: message_with_id()
---
{
  "op": "setParameters",
  "parameters": [
    {
      "name": "empty"
    },
    {
      "name": "f64",
      "type": "float64",
      "value": 1.23
    },
    {
      "name": "f64[]",
      "type": "float64_array",
      "value": [
        1.23,
        4.56
      ]
    },
    {
      "name": "byte[]",
      "type": "byte_array",
      "value": "ECAw"
    },
    {
      "name": "bool",
      "value": true
    }
  ],
  "id": "my-id"
}
